Cluster_Setup-15%/sa-automount&podsecuritypolicy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-app
spec:
  template:
    spec:
      automountServiceAccountToken: false
